@@ -19,7 +19,7 @@
 
 //#define SERIAL_MENU_OPTION    1       /* if on, enables serial menu interface */
 
-//#define DEBUG_CAN_MSG 	    	1		/* conditional compile for printing can info */
+//#define DEBUG_CAN_MSG 	    1		/* conditional compile for printing can info */
 //#define DEBUG_CONTROL_RATE	1 		/* for debugging control cycle rate */
 //#define DEBUG_TRAJECTORY 		1		/* print encoder/joint position */
 //#define DEBUG_SERIAL			1		/* for debugging through terminal */
@@ -27,7 +27,6 @@
 //#define DEBUG_CALIBRATION		1		/* for calibration debugging through terminal */
 //#define EMERGENCY_DISABLED	1		/* emergency fault signal disabled */
 //#define SMOOTH_PID_CTRL		1		/* for debugging current spikes */
-
-//#define DEBUG_ANALOG_POSITION
+//#define DEBUG_ANA_INC         1       /* for debugging diff between analog and incremental*/
 
 #endif
